--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,5 +1,10 @@
+@import "normalize.css/normalize";
 .App {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 100px;
 }
 
 
