--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,11 +1,16 @@
 @import "normalize.css/normalize";
 .App {
+  width: 100%;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.app-body {
+  padding-top: 7rem;
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100%;
   margin-bottom: 100px;
 }
-
 
 
