--- a/client/src/components/styles/PackageList.scss
+++ b/client/src/components/styles/PackageList.scss
@@ -1,9 +1,9 @@
 .gallery-container {
   width: 100%;
   display: flex;
-  align-items: center;
   padding-bottom: 50px;
   padding-top: 50px;
+  justify-content: center;
 }
 
 .package-gallery {
@@ -11,9 +11,10 @@
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  gap: 40px;
-  width: 100%;
+  gap: 30px;
+  row-gap: 40px;
   margin-left: 70px;
   margin-right: 70px;
-  background-color: white;
+  max-width: 1400px;
+  min-width: 900px;
 }
