--- a/client/src/components/styles/Nav.scss
+++ b/client/src/components/styles/Nav.scss
@@ -26,5 +26,30 @@
 }
 
 .nav-right {
+  display: flex;
+  flex-direction: column;
   margin-right: 2rem;
+}
+
+.nav-drop-down {
+  background: red;
+  position: absolute;
+  width: 200px;
+  top: 4rem;
+  right: 50px;
+  list-style: none;
+  text-align: start;
+}
+
+.dropdown-link {
+  display: block;
+  height: 100%;
+  width: 100%;
+  text-decoration: none;
+  color: #fff;
+  padding: 16px;
+}
+
+.dropdown-menu.clicked {
+  display: none;
 }
