--- a/client/src/components/styles/PackageListItem.scss
+++ b/client/src/components/styles/PackageListItem.scss
@@ -4,21 +4,21 @@
   padding: 5px;
   filter: drop-shadow(0px 4px 15px #00000030);
   background-color: white;
-  padding-bottom: 15px;
+  padding-bottom: 20px;
 }
 
 .home-img {
   border-radius: 20px;
 }
 
-h2 {
+.package-card-title {
   margin: 0px;
   margin-bottom: 10px;
-  margin-top: 10px;
+  margin-top: 2.5px;
   padding-left: 5px;
   color: black;
 }
-h4 {
+.package-card-text {
   margin: 0px;
   font-size: 18px;
   padding-left: 5px;
