--- a/client/src/components/styles/Nav.scss
+++ b/client/src/components/styles/Nav.scss
@@ -1,5 +1,5 @@
 .Nav {
-  position: fixed;
+  position: absolute;
   width: 100%;
   z-index: 1;
   height: 5rem;
@@ -28,26 +28,44 @@
 .nav-right {
   display: flex;
   flex-direction: column;
+  align-items: flex-end;
   margin-right: 2rem;
+  height: 5rem;
+  width: 200px;
+
+}
+
+.profile-badge {
+  align-self: flex-end;
+  margin-top: 0.65rem;
+  padding: 0.5rem;
+  padding-left: 1rem;
+  border-radius: 70px;
+  background-color: white;
+  filter: drop-shadow(0px 2px 5px #00000020);
 }
 
 .nav-drop-down {
-  background: red;
-  position: absolute;
-  width: 200px;
-  top: 4rem;
-  right: 50px;
+  background: white;
+  width: 175px;
   list-style: none;
-  text-align: start;
+  text-align:left;
+  margin-top: 0.5rem;
+  padding-left: 0px;
+  border-radius: 20px;
+  padding-top: 0rem;
+  padding-bottom: 1rem;
+  filter: drop-shadow(0px 4px 10px #00000020);
 }
 
 .dropdown-link {
   display: block;
   height: 100%;
-  width: 100%;
+  padding-top: 1rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
   text-decoration: none;
-  color: #fff;
-  padding: 16px;
+  color: black;
 }
 
 .dropdown-menu.clicked {
