--- a/client/src/components/styles/Nav.scss
+++ b/client/src/components/styles/Nav.scss
@@ -44,6 +44,9 @@
   background-color: white;
   filter: drop-shadow(0px 2px 5px #00000020);
 }
+.profile-badge:hover {
+  cursor: pointer;
+}
 
 .nav-drop-down {
   background: white;
