--- a/client/src/components/styles/Nav.scss
+++ b/client/src/components/styles/Nav.scss
@@ -1,7 +1,7 @@
 .Nav {
-  position: absolute;
+  position: fixed;
   width: 100%;
-  z-index: 1;
+  z-index: 2;
   height: 5rem;
   display: flex;
   flex-direction: row;
