--- a/client/src/components/styles/BookingList.scss
+++ b/client/src/components/styles/BookingList.scss
@@ -1,6 +1,37 @@
-.booking-container {
+.BookingList {
   width: 100%;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  justify-content: center;
+  min-width: 950px;
+  max-width: 1200px;
+  margin-top: -1rem;
 }
+
+.booking-container {
+  width: 100%;
+  align-items: center;
+  margin-left: 6rem;
+  margin-right: 6rem;
+}
+
+// .gallery-container {
+//   position: relative;
+//   width: 100%;
+//   display: flex;
+//   padding-bottom: 50px;
+//   padding-top: 10px;
+//   justify-content: center;
+// }
+
+// .package-gallery {
+//   display: flex;
+//   flex-direction: row;
+//   flex-wrap: wrap;
+//   justify-content: space-evenly;
+//   gap: 30px;
+//   row-gap: 40px;
+//   margin-left: 70px;
+//   margin-right: 70px;
+//   max-width: 1400px;
+//   min-width: 1000px;
+// }
