--- a/client/src/pages/styles/Package.scss
+++ b/client/src/pages/styles/Package.scss
@@ -20,8 +20,7 @@
   width: 100%;
 }
 
-
-.card{
+.card {
   min-width: 250px;
   margin-left: 3px;
 }
@@ -31,4 +30,9 @@ h2 {
   margin-top: 20px;
   padding-left: 5px;
   color: black;
+}
+
+.description-box {
+  margin-right: 1.5rem;
+  margin-left: 0.25rem;
 }
