--- a/client/src/components/styles/Login.scss
+++ b/client/src/components/styles/Login.scss
@@ -1,63 +1,90 @@
-#container {
-  height: 100vh;
-  width: 100vw;
-  padding: 0;
-  margin: 0;
-  overflow: hidden;
-  background: linear-gradient(45deg, #F9C6F5 50%, #e6eaea 50%);
+// #container {
+//   height: 100vh;
+//   width: 100vw;
+//   padding: 0;
+//   margin: 0;
+//   overflow: hidden;
+//   background: linear-gradient(45deg, #F9C6F5 50%, #e6eaea 50%);
 
-}
-h1{
-  // margin-top: 5%;
-  position: fix;
-  left: 30%;
+// }
+// h1{
+//   // margin-top: 5%;
+//   position: fix;
+//   left: 30%;
 
-}
-.form-container{
-  // display: flex;
-  // align-items: center;
-    position: relative;
-  left: 35%;
-margin-top: 7%;
-  border-radius: 23px;
-  filter: drop-shadow(0px 4px 7px #00000030);
-  background-color: white;
-  margin-bottom: 1rem;
-  width: 20vw;
-  height: 40vh;
-  padding: 3% 5% 10% 5%;
-}
- input{
-  border-radius: 20px;
-  width: 13rem;
- }
-.form{
+// }
+// .form-container{
+//   // display: flex;
+//   // align-items: center;
+//     position: relative;
+//   left: 35%;
+// margin-top: 7%;
+//   border-radius: 23px;
+//   filter: drop-shadow(0px 4px 7px #00000030);
+//   background-color: white;
+//   margin-bottom: 1rem;
+//   width: 20vw;
+//   height: 40vh;
+//   padding: 3% 5% 10% 5%;
+// }
+//  input{
+//   border-radius: 20px;
+//   width: 13rem;
+//  }
+// .form{
   
-  .input-email{
-    // margin-top: 5%;
-    margin-bottom: 15%;
-    padding: 5% 5%;
+//   .input-email{
+//     // margin-top: 5%;
+//     margin-bottom: 15%;
+//     padding: 5% 5%;
 
-  }
-  .input-password{
-    margin-top: 3%;
-    margin-bottom: 30%;
-    padding: 5% 5%;
-  }
+//   }
+//   .input-password{
+//     margin-top: 3%;
+//     margin-bottom: 30%;
+//     padding: 5% 5%;
+//   }
 
+// }
+
+// .btn-form{
+//   display: flex;
+//   justify-content: center;
+//   background-color: #F9C6F5;
+//   padding: 1rem;
+//   width: 15rem;
+//   border-radius: 40px;
+//   border: none;
+//   filter: drop-shadow(0px 0px 4px #00000025);
+//   h4 {
+//     margin: 0px;
+//   }
+//   cursor: pointer;
+// }
+
+.form-container {
+  background-color: white;
+  width:25rem;
+  filter: drop-shadow(0px 2px 7px #00000018);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 60px;
+  input{
+    border-radius: 70px;
+    width: 18rem;
+    padding: 1rem;
+    border: none;
+    border: 0.75px solid #dddddd;;
+    // filter: drop-shadow(0px 2px 2px #00000010);
+    margin-bottom: 1rem;
+  }
 }
 
-.btn-form{
+.button-section{
   display: flex;
+
   justify-content: center;
-  background-color: #F9C6F5;
-  padding: 1rem;
-  width: 15rem;
-  border-radius: 40px;
-  border: none;
-  filter: drop-shadow(0px 0px 4px #00000025);
-  h4 {
-    margin: 0px;
-  }
-  cursor: pointer;
+  margin-top: 0.25rem;
+  padding-bottom: 1.5rem;
 }
