--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -14,3 +14,12 @@
 }
 
 
+
+//@paige find me review <Fit />
+.react-date-picker__calendar--open{
+  position: absolute
+}
+
+.react-date-picker__calendar--closed{
+  position: absolute
+}
