--- a/client/src/components/styles/BookingBox.scss
+++ b/client/src/components/styles/BookingBox.scss
@@ -6,6 +6,7 @@
   background-color: #fff;
   filter: drop-shadow(0px 4px 7px #00000020);
   margin-top: 1.5rem;
+  max-height: 18.75rem;
   // h4{
   //   font-size: 0.8rem;
   //   padding: 2%;
