--- a/client/src/pages/styles/Package.scss
+++ b/client/src/pages/styles/Package.scss
@@ -33,12 +33,61 @@ h2 {
 }
 
 .description-box {
-  margin-right: 1.5rem;
+  margin-right: 5rem;
   margin-left: 0.25rem;
 }
 
-.empty-div{
+.empty-div {
   width: 100%;
   height: 100%;
   flex-grow: 20;
+}
+
+.product-grid-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 1.5rem;
+}
+
+.product-grid {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin-right: 20px;
+  margin-left: 10px;
+}
+
+.product-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: white;
+  width: 200px;
+  height: 210px;
+  padding: 0.75rem;
+  filter: drop-shadow(0px 4px 10px #00000020);
+  border-radius: 18px;
+  p {
+    margin: 0px;
+    margin-top: 0.5rem;
+    font-size: 12px;
+    width: 200px;
+  }
+}
+
+.product-img-box {
+  display: flex;
+  background-color: white;
+  width: 190px;
+  height: 190px;
+  overflow: hidden;
+  justify-content: center;
+  background-color: white;
+  object-fit: contain;
+  aspect-ratio: 1/1;
+  img {
+    object-fit: contain;
+    aspect-ratio: 1/1;
+  }
 }
