--- a/client/src/components/styles/BookingBox.scss
+++ b/client/src/components/styles/BookingBox.scss
@@ -6,7 +6,7 @@
   background-color: #fff;
   filter: drop-shadow(0px 4px 7px #00000020);
   margin-top: 1.5rem;
-  max-height: 18.75rem;
+  max-height: 21.75rem;
   // h4{
   //   font-size: 0.8rem;
   //   padding: 2%;
@@ -47,5 +47,17 @@
 .package-price-box {
   margin: 0px;
   align-self: flex-start;
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.25rem;
+}
+
+.price-section {
+  width: 92%;
+  margin-top: 0.1rem;
+  padding: 1rem;
+}
+
+.price-row{
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1rem;
 }
