--- a/client/src/components/styles/BookingBox.scss
+++ b/client/src/components/styles/BookingBox.scss
@@ -1,12 +1,14 @@
 .booking-box-container {
+  position: sticky;
+  top: 6rem;
   display: flex;
   flex-direction: column;
   align-items: center;
-  border-radius: 23px;
+  border-radius: 40px;
   background-color: #fff;
   filter: drop-shadow(0px 4px 7px #00000020);
   margin-top: 1.5rem;
-  max-height: 21.75rem;
+  max-height: 22.75rem;
   // h4{
   //   font-size: 0.8rem;
   //   padding: 2%;
@@ -40,24 +42,25 @@
 }
 
 .book-button {
-  margin-top: -4.5rem;
-  padding-top: 0.5rem;
+  margin-top: 1rem;
 }
 
 .package-price-box {
   margin: 0px;
   align-self: flex-start;
-  margin-bottom: 0.25rem;
+  margin-bottom: 0.45rem;
 }
 
 .price-section {
-  width: 92%;
-  margin-top: 0.1rem;
+  width: 90%;
+  border: 0.75px solid #c7c7c7;
+  border-radius: 20px;
+  margin-top: -4rem;
   padding: 1rem;
 }
 
 .price-row{
   display: flex;
   justify-content: space-between;
-  margin-bottom: 1rem;
+  margin-bottom: 0.5rem;
 }
