--- a/client/src/components/styles/Login.scss
+++ b/client/src/components/styles/Login.scss
@@ -75,7 +75,7 @@
     width: 18rem;
     padding: 1rem;
     border: none;
-    border: 0.75px solid #dddddd;;
+    border: 0.75px solid #dddddd;
     // filter: drop-shadow(0px 2px 2px #00000010);
     margin-bottom: 1rem;
   }
