--- a/client/src/components/styles/PackageListItem.scss
+++ b/client/src/components/styles/PackageListItem.scss
@@ -5,6 +5,7 @@
   filter: drop-shadow(0px 4px 15px #00000030);
   background-color: white;
   padding-bottom: 1rem;
+  cursor: pointer;
 }
 
 .home-img {
