--- a/client/src/components/styles/CategoryLinksBar.scss
+++ b/client/src/components/styles/CategoryLinksBar.scss
@@ -21,6 +21,47 @@
 //   filter: invert(42%) sepia(93%) saturate(1352%) hue-rotate(87deg) brightness(119%) contrast(119%);
 // }
 
+@keyframes bounce {
+  0% {
+    transform: translateY(0px);
+  }
+  // up
+  20% {
+    transform: translateY(-7px);
+  }
+  // down
+  30% {
+    transform: translateY(0px);
+  }
+  // up
+  40% {
+    transform: translateY(-3px);
+  }
+  // settle
+  50% {
+    transform: translateY(0);
+  }
+}
+
 .category-group {
   cursor: pointer;
+  display: flex;
+  justify-content: center;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  &-selected {
+    display: flex;
+    justify-content: center;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+    animation-name: bounce;
+    animation-fill-mode: both;
+    animation-duration: 0.9s;
+    cursor: pointer;
+  }
+}
+
+.category-group-selected > img {
+  filter: invert(82%) sepia(39%) saturate(291%) hue-rotate(273deg)
+    brightness(99%) contrast(98%);
 }
