--- a/client/src/components/styles/Nav.scss
+++ b/client/src/components/styles/Nav.scss
@@ -23,6 +23,7 @@
 
 .nav-left {
   margin-left: 2rem;
+  cursor: pointer;
 }
 
 .nav-right {
@@ -41,6 +42,8 @@
   padding: 0.5rem;
   padding-left: 1rem;
   border-radius: 70px;
+  width: 4.75rem;
+  height: 2.5rem;
   background-color: white;
   filter: drop-shadow(0px 2px 5px #00000020);
 }
