--- a/client/src/components/styles/Nav.scss
+++ b/client/src/components/styles/Nav.scss
@@ -7,7 +7,7 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  background-color: white;
+  // background-color: white;
 }
 
 .nav-innards {
@@ -17,20 +17,39 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  max-width: 1400px;
+  max-width: 1650px;
   min-width: 1000px;
 }
 
 .nav-left {
+  display: flex;
+  flex-direction: column;
+  background-color: white;
   margin-left: 2rem;
   cursor: pointer;
+  width: 6.75rem;
+  height: 6.75rem;
+  border-radius: 40px;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: -3rem;
+  filter: drop-shadow(0px 2px 5px #00000020);
+  padding: 0px;
+  img {
+  }
+  p {
+    margin: 0px;
+    margin-top: -1rem;
+    padding: 0px;
+    padding-bottom: 0.5rem;
+  }
 }
 
 .nav-right {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  margin-right: 2rem;
+  margin-right: 2.5rem;
   height: 5rem;
   width: 200px;
 }
