--- a/client/src/pages/styles/Home.scss
+++ b/client/src/pages/styles/Home.scss
@@ -1,12 +1,36 @@
-// .top-area {
-//   background-color: red;
-//   margin-top: -2rem;
-//   width: 100%;
-//   background-image: url(/assets/rainbow.png);
-//   background-size: cover;
-//   height: 25rem;
-// }
+.top-area {
+  background-color: red;
+  margin-top: -8rem;
+  width: 100%;
+  // background-image: url(/assets/rainbow.png);
+  background-image: url(/assets/landscape.jpg);
+  background-size: cover;
+  height: 59rem;
+  bottom: 34rem;
+  position: fixed;
+}
+
+.selector-container{
+  background-color: white;
+  border-radius: 23px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 32rem;
+  height: 8rem;
+  padding-top: 1rem;
+  margin-bottom: 10px;
+  filter: drop-shadow(0px 2px 5px #00000020);
+  z-index: 1;
+}
+
+.header-text{
+  text-align: center;
+  font-size: 1.4rem;
+  color: indigo;
+}
 
 .gallery-container {
+  margin-top: 4rem;
   scrollbar-gutter: stable both-edges;
 }
