--- a/client/src/components/styles/CategoryLinksBar.scss
+++ b/client/src/components/styles/CategoryLinksBar.scss
@@ -1,21 +1,51 @@
+//  stacked
+// .category-links-container {
+//   width: 100%;
+//   display: flex;
+//   justify-content: center;
+//   border-top: 0.75px solid #dddddd;;
+//   margin-top: -4rem;
+//   // background-color: red;
+// }
 .category-links-container {
-  width: 37rem;
+  width: 100%;
   display: flex;
-  justify-content: center;
+  // justify-content: center;
+  // // border-top: 0.75px solid #dddddd;;
+  // margin-top: -4rem;
+  // background-color: red;
 }
+
+// stacked
+// .CategoryLinksBar {
+//   display: flex;
+//   flex-direction: row;
+//   justify-content: space-around;
+//   align-items: center;
+//   margin-left: 70px;
+//   margin-right: 70px;
+//   width: 70%;
+
+//   // padding-bottom: 0.75rem;
+//   // padding-top: 0.75rem;
+//   padding-right: 0.75rem;
+//   // background-color: red;
+//   // background-color: red;
+// }
 
 .CategoryLinksBar {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
-  margin-left: 70px;
-  margin-right: 70px;
-  width: 100%;
+  // justify-content: space-around;
+  // align-items: center;
+  // margin-left: 70px;
+  // margin-right: 70px;
+  // width: 70%;
+
   // padding-bottom: 0.75rem;
   // padding-top: 0.75rem;
-  margin-top:-7em;
-  padding-right: 0.75rem;
+  // padding-right: 0.75rem;
+  // background-color: red;
   // background-color: red;
 }
 
@@ -55,6 +85,8 @@
   padding-right: 0.75rem;
   border-radius: 1.5rem;
   width: 4rem;
+  margin-right: 1rem;
+  margin-left: 1rem;
   &-selected {
     display: flex;
     justify-content: center;
@@ -65,6 +97,8 @@
     border-radius: 1.5rem;
     // filter: drop-shadow(0px 2px 5px #00000020);
     width: 4rem;
+    margin-right: 1rem;
+    margin-left: 1rem;
   }
   background-color: white;
   // filter: drop-shadow(0px 2px 5px #00000020);
