--- a/client/src/components/styles/Login.scss
+++ b/client/src/components/styles/Login.scss
@@ -63,6 +63,7 @@
 // }
 
 .form-container {
+  top: 10rem;
   background-color: white;
   width:25rem;
   filter: drop-shadow(0px 2px 7px #00000018);
@@ -70,6 +71,10 @@
   flex-direction: column;
   align-items: center;
   border-radius: 60px;
+  position: fixed;
+  z-index: 10;
+  left: 50%;
+  transform: translate(-50%, 0);
   input{
     border-radius: 70px;
     width: 18rem;
