--- a/client/src/components/styles/Nav.scss
+++ b/client/src/components/styles/Nav.scss
@@ -1,13 +1,13 @@
 .Nav {
   position: fixed;
   width: 100%;
-  z-index: 2;
+  z-index: 4;
   height: 5rem;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  // background-color: white;
+  background-color: white;
 }
 
 .nav-innards {
@@ -21,27 +21,50 @@
   min-width: 1000px;
 }
 
+// .nav-left {
+//   display: flex;
+//   flex-direction: column;
+//   background-color: white;
+//   margin-left: 2rem;
+//   cursor: pointer;
+//   width: 6.75rem;
+//   height: 6.75rem;
+//   border-radius: 40px;
+//   justify-content: center;
+//   align-items: center;
+//   margin-bottom: -3rem;
+//   filter: drop-shadow(0px 2px 5px #00000020);
+//   padding: 0px;
+//   img {
+//   }
+//   p {
+//     margin: 0px;
+//     margin-top: -1rem;
+//     padding: 0px;
+//     padding-bottom: 0.5rem;
+//   }
+// }
 .nav-left {
   display: flex;
-  flex-direction: column;
-  background-color: white;
+  // background-color: white;
   margin-left: 2rem;
   cursor: pointer;
-  width: 6.75rem;
+  // width: 6.75rem;
   height: 6.75rem;
   border-radius: 40px;
   justify-content: center;
   align-items: center;
-  margin-bottom: -3rem;
-  filter: drop-shadow(0px 2px 5px #00000020);
+  // margin-bottom: -3rem;
+  // filter: drop-shadow(0px 2px 5px #00000020);
   padding: 0px;
   img {
   }
   p {
     margin: 0px;
-    margin-top: -1rem;
-    padding: 0px;
-    padding-bottom: 0.5rem;
+    // margin-top: -1rem;
+    // padding: 0px;
+    padding-bottom: 0.4rem;
+    padding-left: 0.5rem;
   }
 }
 
@@ -65,6 +88,7 @@
   height: 2.5rem;
   background-color: white;
   filter: drop-shadow(0px 2px 5px #00000020);
+
 }
 .profile-badge:hover {
   cursor: pointer;
@@ -108,17 +132,17 @@
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.22);
-  z-index: 1;
+  z-index: 8;
 }
 
 .login-form-section {
   margin-top: 24rem;
   margin-left: 8rem;
-  z-index: 2;
+  z-index: 8;
 }
 
 .login-form-section.open {
   margin-top: 24rem;
   margin-left: 8rem;
-  z-index: 2;
+  z-index: 8;
 }
