--- a/client/src/pages/styles/Home.scss
+++ b/client/src/pages/styles/Home.scss
@@ -1,36 +1,95 @@
 .top-area {
-  background-color: red;
+  background-color: white;
   margin-top: -8rem;
   width: 100%;
-  // background-image: url(/assets/rainbow.png);
+  background-image: url(/assets/rainbow.png);
   background-image: url(/assets/landscape.jpg);
   background-size: cover;
-  height: 59rem;
+  height: 57rem;
   bottom: 34rem;
   position: fixed;
 }
-
+// stacked
+// .selector-container{
+//   background-color: white;
+//   display: flex;
+//   flex-direction: column;
+//   align-items: center;
+//   width: 100%;
+//   margin-top: 12rem;
+//   padding-top: 1rem;
+//   filter: drop-shadow(0px 2px 5px #00000020);
+//   z-index: 1;
+//   position: sticky;
+//   top: 0rem;
+//   // background-color: red;
+// }
 .selector-container{
-  background-color: white;
-  border-radius: 23px;
+  position: relative;
+  // background-color: white;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  width: 32rem;
-  height: 8rem;
-  padding-top: 1rem;
-  margin-bottom: 10px;
-  filter: drop-shadow(0px 2px 5px #00000020);
+  width: 50%;
+  justify-content: center;
+  margin-top: 15rem;
+  // padding-top: 1rem;
+  filter: drop-shadow(0px 2px 3px #00000010);
+  z-index: 4;
+  padding-top: 0.5rem;
+  padding-bottom: 0.60rem;
+  position: sticky;
+  top: 0rem;
+  // border-bottom: 0.75px solid #dddddd;;
+
+  // // height: 5rem;
+  // // background-color: red;
+  // background-color: antiquewhite;
+}
+.selector-container-empty{
+  position: relative;
+  height: 4.6rem;
+  background-color: white;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  justify-content: center;
+  margin-top: -5.2rem;
+  // padding-top: 1rem;
+  // filter: drop-shadow(0px 2px 3px #00000010);
   z-index: 1;
+  padding-bottom: 0.60rem;
+  position: sticky;
+  top: 0rem;
+  // border-bottom: 0.75px solid #dddddd;;
+
+  // // height: 5rem;
+  // // background-color: red;
+  // background-color: antiquewhite;
+}
+
+.date-picker-section{
+  display: flex;
+  width: 90%;
+  justify-content: center;
+  // background-color: red;
+  align-items: center;
+  z-index: 6;
 }
 
 .header-text{
+  margin-top: 6rem;
   text-align: center;
   font-size: 1.4rem;
-  color: indigo;
+  color: white;
+  z-index: 2;
+  position: fixed;
+  margin-left: 2rem;
 }
 
 .gallery-container {
-  margin-top: 4rem;
+  margin-top: 0rem;
+  padding-top: 2rem;
   scrollbar-gutter: stable both-edges;
+  background-color: white;
+  z-index: 2;
 }
