--- a/client/src/components/styles/DatePicker.scss
+++ b/client/src/components/styles/DatePicker.scss
@@ -1,5 +1,16 @@
 .search-box {
   // z-index: 1;
+  display: flex;
+  justify-content: space-between;
+  // background-color: white;
+  padding: 0.75rem;
+  border-radius: 70px;
+  // box-shadow: inset 0 2px 7px #00000010, inset 10px -15px 30px #00000010;
+  // filter: drop-shadow(0px 2px 4px #00000020);
+  // margin-bottom: 5rem;
+}
+.search-box-booking {
+  // z-index: 1;
   width: 21rem;
   display: flex;
   justify-content: space-between;
