--- a/client/src/pages/styles/Home.scss
+++ b/client/src/pages/styles/Home.scss
@@ -29,16 +29,25 @@
   // background-color: white;
   display: flex;
   align-items: center;
-  width: 50%;
+  width: 40rem;
+  padding-left: 3rem;
   justify-content: center;
-  margin-top: 15rem;
+  margin-top: 16rem;
   // padding-top: 1rem;
   filter: drop-shadow(0px 2px 3px #00000010);
   z-index: 4;
-  padding-top: 0.5rem;
-  padding-bottom: 0.60rem;
+  // padding-top: 0.5rem;
+  // padding-bottom: 0.60rem;
   position: sticky;
-  top: 0rem;
+  top: 0.4rem;
+  background-color: white;
+  display: flex;
+  justify-content: space-between;
+  border-radius: 70px;
+  // box-shadow: inset 0 2px 7px #00000010, inset 10px -15px 30px #00000010;
+  filter: drop-shadow(0px 2px 4px #00000030);
+  // margin-bottom: 5rem;
+
   // border-bottom: 0.75px solid #dddddd;;
 
   // // height: 5rem;
@@ -47,13 +56,13 @@
 }
 .selector-container-empty{
   position: relative;
-  height: 4.6rem;
+  height: 5rem;
   background-color: white;
   display: flex;
   align-items: center;
   width: 100%;
   justify-content: center;
-  margin-top: -5.2rem;
+  margin-top: -5.5rem;
   // padding-top: 1rem;
   // filter: drop-shadow(0px 2px 3px #00000010);
   z-index: 1;
