email submit box added to package pg, dates fixed

--- a/client/src/pages/styles/Home.scss
+++ b/client/src/pages/styles/Home.scss
@@ -1,14 +1,14 @@
-.top-area {
-  background-color: white;
-  margin-top: -8rem;
-  width: 100%;
-  background-image: url(/assets/rainbow.png);
-  background-image: url(/assets/landscape.jpg);
-  background-size: cover;
-  height: 57rem;
-  bottom: 34rem;
-  position: fixed;
-}
+// .top-area {
+//   background-color: white;
+//   margin-top: -8rem;
+//   width: 100%;
+//   background-image: url(/assets/rainbow.png);
+//   background-image: url(/assets/landscape.jpg);
+//   background-size: cover;
+//   height: 57rem;
+//   bottom: 34rem;
+//   position: fixed;
+// }
 // stacked
 // .selector-container{
 //   background-color: white;
