--- a/client/src/pages/styles/Package.scss
+++ b/client/src/pages/styles/Package.scss
@@ -92,3 +92,11 @@ h2 {
     aspect-ratio: 1/1;
   }
 }
+
+.package-boxes{
+  position: sticky;
+  top: 500px;
+  background-color: red;
+  height: 50rem;
+}
+
