--- a/client/src/components/styles/PackageList.scss
+++ b/client/src/components/styles/PackageList.scss
@@ -6,19 +6,37 @@
   padding-top: 1rem;
   justify-content: center;
   background-color: white;
+  max-width: 1400px;
 }
 
 .package-gallery {
-  padding-top: 0.5rem;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  gap: 15px;
-  row-gap: 40px;
-  margin-left: 70px;
-  margin-right: 70px;
-  max-width: 1400px;
-  min-width: 1000px;
-  min-height: 101vh; // a potential way to keep scroll on category click
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  grid-template-rows: auto;
+  column-gap: 1rem;
+  row-gap: 1rem;
+  padding-bottom: 10rem;
+  // justify-content: space-evenly
+  // padding-top: 0.5rem;
+  // display: flex;
+  // flex-direction: row;
+  // flex-wrap: wrap;
+  // justify-content: space-evenly;
+  // gap: 15px;
+  // row-gap: 40px;
+  // margin-left: 70px;
+  // margin-right: 70px;
+  // max-width: 1400px;
+  // min-width: 1000px;
+  // min-height: 101vh; // a potential way to keep scroll on category click
+}
+
+@media screen and (max-width: 1500px) {
+  .package-gallery {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-template-rows: auto;
+    column-gap: 1rem;
+    row-gap: 1rem;
+  }
 }
