--- a/client/src/components/styles/BookingBox.scss
+++ b/client/src/components/styles/BookingBox.scss
@@ -1,6 +1,6 @@
 .booking-box-container {
-  // position: sticky;
-  // top: 6rem;
+  position: sticky;
+  top: 6rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -9,6 +9,7 @@
   filter: drop-shadow(0px 4px 7px #00000020);
   margin-top: 1.5rem;
   max-height: 22.75rem;
+  margin-bottom: 4rem;
   // h4{
   //   font-size: 0.8rem;
   //   padding: 2%;
