--- a/client/src/components/styles/Button.scss
+++ b/client/src/components/styles/Button.scss
@@ -82,4 +82,18 @@
     }
     cursor: pointer;
   }
+  &-message{
+    background-color: #f9c6f5;
+    width: 20rem;
+    border-radius: 20px;
+    border: none;
+    filter: drop-shadow(0px 0px 4px #00000025);
+    cursor: pointer;
+    h4 {
+      margin: 0px;
+    }
+    img {
+      // filter: invert(100%);
+    }
+  }
 }
