--- a/client/src/components/styles/MessageBox.scss
+++ b/client/src/components/styles/MessageBox.scss
@@ -16,60 +16,57 @@ textarea::-webkit-scrollbar-thumb {
   border: 3px solid white;
 }
 
+.message-box-column{
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  max-width: 45.5rem;
+  min-width: 35rem;
+  align-items: center;
+  margin-right: 3rem;
+  border-radius: 20px;
+  filter: drop-shadow(0px 4px 7px #00000020);
+}
+
 .message-box-container {
   // position: sticky;
   // top: 40rem;
+  // width: 20rem;
   display: flex;
-  flex-direction: column;
+  // flex-direction: column;
   align-items: center;
-  border-radius: 40px;
-  background-color: rgb(73, 127, 255);
-  filter: drop-shadow(0px 4px 7px #00000020);
-  margin-top: 1.5rem;
-  max-height: 22.75rem;
+  justify-content: center;
+  border-radius: 20px;
+  background-color: white;
+  // margin-top: 1.5rem;
+  // max-height: 22.75rem;
+  width: 100%;
+
+  height: 11rem;
 }
 
 .message-text-area{
-  border-radius: 10px;
+  margin-top: 1rem;
+  border-radius: 12px;
   padding: 0.5rem;
   border: 0.75px solid #c7c7c7;
   resize: none;
   overflow:hidden;
-  overflow-y: scroll;
+  margin: 0.5rem;
+  flex: 1;
+  height: 8.75rem;
+  // overflow-y: scroll;
 }
 
 
-.booking-info {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding-top: 2rem;
-  padding-bottom: 1rem;
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
+
+
+.message-button {
+  margin-right: 0.5rem;
+  // margin-top: 0rem;
+  margin-bottom: 0.65rem;
+  
 }
 
-.book-button {
-  margin-top: 1rem;
-}
 
-.package-price-box {
-  margin: 0px;
-  align-self: flex-start;
-  margin-bottom: 0.45rem;
-}
 
-.price-section {
-  width: 90%;
-  border: 0.75px solid #c7c7c7;
-  border-radius: 20px;
-  margin-top: 1rem;
-  padding: 1rem;
-
-}
-
-.price-row{
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 0.5rem;
-}
