--- a/client/src/components/styles/Nav.scss
+++ b/client/src/components/styles/Nav.scss
@@ -86,7 +86,7 @@
   border-radius: 70px;
   width: 4.75rem;
   height: 2.5rem;
-  background-color: white;
+  background-color: #fcfbf3;
   filter: drop-shadow(0px 2px 5px #00000020);
 
 }
