--- a/client/src/components/styles/PackageList.scss
+++ b/client/src/components/styles/PackageList.scss
@@ -6,7 +6,8 @@
   padding-top: 1rem;
   justify-content: center;
   background-color: white;
-  max-width: 1400px;
+  height: 100vh;
+  // max-width: 1400px;;
 }
 
 .package-gallery {
