--- a/client/src/pages/styles/Home.scss
+++ b/client/src/pages/styles/Home.scss
@@ -9,6 +9,17 @@
 //   bottom: 34rem;
 //   position: fixed;
 // }
+.top-area {
+background-color: #ff8f20;
+margin-top: -7rem;
+width: 100%;
+height: 400px;
+  // background-image: url(/assets/campr-banner.jpg);
+display: flex;
+align-items: center;
+justify-content: center;
+filter: drop-shadow(0px 2px 4px #00000030);
+}
 // stacked
 // .selector-container{
 //   background-color: white;
@@ -32,7 +43,7 @@
   width: 40rem;
   padding-left: 3rem;
   justify-content: center;
-  margin-top: 16rem;
+  margin-top: 0rem;
   // padding-top: 1rem;
   filter: drop-shadow(0px 2px 3px #00000010);
   z-index: 4;
@@ -86,13 +97,12 @@
 }
 
 .header-text{
-  margin-top: 6rem;
+  margin-top: 5rem;
   text-align: center;
-  font-size: 1.4rem;
-  color: white;
-  z-index: 2;
+  font-size: 3rem;
   position: fixed;
   margin-left: 2rem;
+  color: black;
 }
 
 .gallery-container {
