--- a/client/src/components/styles/Nav.scss
+++ b/client/src/components/styles/Nav.scss
@@ -46,18 +46,19 @@
 // }
 .nav-left {
   display: flex;
-  // background-color: white;
+  background-color: red;
   margin-left: 2rem;
   cursor: pointer;
   // width: 6.75rem;
   height: 6.75rem;
-  border-radius: 40px;
+  // border-radius: 40px;
   justify-content: center;
   align-items: center;
   // margin-bottom: -3rem;
   // filter: drop-shadow(0px 2px 5px #00000020);
   padding: 0px;
   img {
+    padding: 1rem;
   }
   p {
     margin: 0px;
@@ -86,7 +87,7 @@
   border-radius: 70px;
   width: 4.75rem;
   height: 2.5rem;
-  background-color: #fcfbf3;
+  background-color: white;
   filter: drop-shadow(0px 2px 5px #00000020);
 
 }
