--- a/client/src/components/styles/PackageList.scss
+++ b/client/src/components/styles/PackageList.scss
@@ -6,7 +6,7 @@
   padding-top: 1rem;
   justify-content: center;
   background-color: white;
-  height: 100vh;
+  // min-height: 100vh;
   // max-width: 1400px;;
 }
 
@@ -16,7 +16,8 @@
   grid-template-rows: auto;
   column-gap: 1rem;
   row-gap: 1rem;
-  padding-bottom: 10rem;
+  // background-color: red;
+  // padding-bottom: 0rem;
   // justify-content: space-evenly
   // padding-top: 0.5rem;
   // display: flex;
