--- a/client/src/components/styles/Nav.scss
+++ b/client/src/components/styles/Nav.scss
@@ -46,7 +46,6 @@
 // }
 .nav-left {
   display: flex;
-  background-color: red;
   margin-left: 2rem;
   cursor: pointer;
   // width: 6.75rem;
@@ -58,14 +57,17 @@
   // filter: drop-shadow(0px 2px 5px #00000020);
   padding: 0px;
   img {
-    padding: 1rem;
+    padding: 0rem;
+    padding-left: 1rem;
+    // filter: invert(13%) sepia(59%) saturate(7158%) hue-rotate(242deg) brightness(91%) contrast(97%);
   }
   p {
     margin: 0px;
+    // color: #2732d4;
     // margin-top: -1rem;
     // padding: 0px;
     padding-bottom: 0.1rem;
-    padding-left: 0.5rem;
+    padding-left: 0.25rem;
   }
 }
 
