--- a/client/src/pages/styles/Home.scss
+++ b/client/src/pages/styles/Home.scss
@@ -10,7 +10,7 @@
 //   position: fixed;
 // }
 .top-area {
-background-color: #ff8f20;
+background-color: #ff9924;
 margin-top: -7rem;
 width: 100%;
 height: 400px;
