--- a/client/src/pages/styles/Home.scss
+++ b/client/src/pages/styles/Home.scss
@@ -10,15 +10,14 @@
 //   position: fixed;
 // }
 .top-area {
-background-color: #ff9924;
-margin-top: -7rem;
-width: 100%;
-height: 400px;
+  background-color: #ff9924;
+  margin-top: -7rem;
+  width: 100%;
+  height: 400px;
   // background-image: url(/assets/campr-banner.jpg);
-display: flex;
-align-items: center;
-justify-content: center;
-filter: drop-shadow(0px 2px 4px #00000030);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 // stacked
 // .selector-container{
@@ -35,7 +34,7 @@ filter: drop-shadow(0px 2px 4px #00000030);
 //   top: 0rem;
 //   // background-color: red;
 // }
-.selector-container{
+.selector-container {
   position: relative;
   // background-color: white;
   display: flex;
@@ -65,7 +64,7 @@ filter: drop-shadow(0px 2px 4px #00000030);
   // // background-color: red;
   // background-color: antiquewhite;
 }
-.selector-container-empty{
+.selector-container-empty {
   position: relative;
   height: 5rem;
   background-color: white;
@@ -77,7 +76,7 @@ filter: drop-shadow(0px 2px 4px #00000030);
   // padding-top: 1rem;
   // filter: drop-shadow(0px 2px 3px #00000010);
   z-index: 1;
-  padding-bottom: 0.60rem;
+  padding-bottom: 0.6rem;
   position: sticky;
   top: 0rem;
   // border-bottom: 0.75px solid #dddddd;;
@@ -87,7 +86,7 @@ filter: drop-shadow(0px 2px 4px #00000030);
   // background-color: antiquewhite;
 }
 
-.date-picker-section{
+.date-picker-section {
   display: flex;
   width: 90%;
   justify-content: center;
@@ -96,13 +95,26 @@ filter: drop-shadow(0px 2px 4px #00000030);
   z-index: 6;
 }
 
-.header-text{
-  margin-top: 5rem;
-  text-align: center;
-  font-size: 3rem;
-  position: fixed;
-  margin-left: 2rem;
+.header-text {
+  margin: 0px;
+  // text-align: center;
+  font-size: 1.75rem;
+  // position: fixed;
+  // margin-left: 2rem;
+
   color: black;
+}
+.top-image{
+  display: flex;
+  flex-direction: column;
+  margin-top: 1.5rem;
+  position: fixed;
+
+  align-items: center;
+  img {
+    margin-right: 0.1rem;
+    margin-bottom: -0.45rem;
+  }
 }
 
 .gallery-container {
