--- a/client/src/components/styles/Map.scss
+++ b/client/src/components/styles/Map.scss
@@ -4,9 +4,11 @@
   padding: 20px;
   padding-left: 10px;
   text-align: center;
+  border-radius: 20px;
 }
 
 .google-map {
+  border-radius: 20px;
   width: 100%;
   height: 60vh;
 }
@@ -15,7 +17,7 @@
   display: flex;
   align-items: center;
   width: 180px;
-  color: var(--main-blue);
+  color: #2732d4;
 }
 
 .pin-icon {
@@ -28,6 +30,7 @@
 
 @media screen and (min-width: 799px) {
   .google-map {
+    border-radius: 20px;
     height: 80vh;
   }
 
