--- a/client/src/components/styles/Nav.scss
+++ b/client/src/components/styles/Nav.scss
@@ -65,9 +65,13 @@
     margin: 0px;
     // color: #2732d4;
     // margin-top: -1rem;
-    // padding: 0px;
-    padding-bottom: 0.1rem;
+    // background-color: red;
+    padding: 0px;
+    padding-bottom: 0.25rem;
     padding-left: 0.25rem;
+    margin-left: -0.15rem;
+    font-size: 1.75rem;
+    font-weight: bold;
   }
 }
 
